--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,17 @@
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#2196f3",
+  "theme_color": "#1976d2",
+  "description": "Editor simples de PDF offline",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/136/136522.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
